--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -72,5 +72,10 @@
   }
   body {
     @apply bg-background text-foreground;
+
+    h1 {
+      font-size: 2em;
+      font-weight: 700;
+    }
   }
 }
