--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -115,6 +115,13 @@ ion-menu.ios ion-note {
     padding-right: 16px;
 }
 
+ion-menu.ios .item-lines-inset,
+ion-menu.md .item-lines-inset {
+    border-bottom: 1px solid;
+    border-radius: 0;
+    border-color: #333;
+}
+
 ion-menu.ios ion-list-header {
     margin-bottom: 8px;
 }
