fix: css button when active

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -41,8 +41,8 @@
     }
 
     /* TODO: les boutons ne sont pas touchés */
-    .ck.ck-toolbar.ck.ck-button.ck-on:not(.ck-disabled):active, a.ck.ck-button.ck-on:not(.ck-disabled):active, .ck.ck-toolbar .ck .ck-button .ck-on {
-        background: #363636 !important;
+    .ck.ck-button.ck-on, a.ck.ck-button.ck-on {
+        background: #4d4d4d !important;
         color: #1a1a1a !important;
     }
 }
