--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -1,12 +1,14 @@
 .container {
     width: 100%;
-    height: 100%;
     padding-top: 2em;
     margin-right: auto;
     margin-left: auto;
     padding-right: 2rem;
     padding-left: 2rem;
     text-align: center;
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
 }
 
 .ck-editor__editable_inline:not(.ck-comment__input *) {
@@ -16,6 +18,51 @@
 
 .ck-editor__main {
     padding-bottom: 2em;
+}
+
+.tags-input {
+    width: 70%;
+    margin: auto;
+}
+
+.tags-input ion-button {
+    margin-bottom: 20px;
+}
+
+[data-scope='tags-input'][data-part='root'] {
+    padding: 10px;
+}
+
+[data-scope='tags-input'][data-part='input'] {
+    background: silver;
+    color: #2a2a2a;
+    padding: 5px 10px;
+    flex: 1;
+    margin-top: 10px;
+}
+
+[data-scope='tags-input'][data-part='item'] {
+    background: var(--ion-color-primary);
+    padding: 5px 15px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+[data-scope='tags-input'][data-part='item-delete-trigger'] {
+    height: 20px;
+}
+
+[data-scope='tags-input'][data-part='control'] {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    display: flex;
+    gap: 10px;
+    padding: 0 10px;
+    margin: 10px 0;
 }
 
 @media (prefers-color-scheme: dark) {
