--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -8,7 +8,7 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-primary-rgb: 123, 33, 159;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #6c1d8c;
+  --ion-color-primary-shade: rgba(108, 29, 140, 0.4);
   --ion-color-primary-tint: #8837a9;
 
   /** secondary **/
