--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -65,6 +65,16 @@
     margin: 10px 0;
 }
 
+.controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.controls ion-item {
+    width: 75%;
+}
+
 @media (prefers-color-scheme: dark) {
     .ck.ck-editor__main > .ck-editor__editable {
         background: #2a2a2a !important;
