--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -67,12 +67,16 @@
 
 .controls {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
     align-items: center;
 }
 
+.controls ion-button {
+    margin-bottom: 20px;
+}
+
 .controls ion-item {
-    width: 75%;
+    width: 100%;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -105,6 +109,6 @@
 
 @media (min-width: 1400px) {
     .container {
-        max-width: 1400px;
+        /*max-width: 1400px;*/
     }
 }
