fix: padding to display lists in editor

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -11,6 +11,10 @@
     flex-direction: column;
 }
 
+.ck.ck-editor__editable_inline {
+    padding: 0 1.5em !important;
+}
+
 .ck-editor__editable_inline:not(.ck-comment__input *) {
     height: 100vh;
     overflow-y: auto;
